src/objects/Observation_Ingredient__c.object
<CustomObject>
    <fields>
        <fullName>Account_Country_ISO_Code__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_6864</fullName>
                    <label>Norway</label>
                </value>
                <value>
                    <fullName>SAP_0976</fullName>
                    <label>Sweden</label>
                </value>
                <value>
                    <fullName>SAP_0975</fullName>
                    <label>Denmark</label>
                </value>
                <value>
                    <fullName>SAP_0333</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>SAP_6706</fullName>
                    <label>France</label>
                </value>
                <value>
                    <fullName>SAP_0080</fullName>
                    <label>Spain</label>
                </value>
                <value>
                    <fullName>SAP_0111</fullName>
                    <label>Netherlands</label>
                </value>
                <value>
                    <fullName>SAP_6709</fullName>
                    <label>Ireland</label>
                </value>
                <value>
                    <fullName>SAP_6712</fullName>
                    <label>Germany</label>
                </value>
                <value>
                    <fullName>SAP_6750</fullName>
                    <label>Great Britain</label>
                </value>
                <value>
                    <fullName>Account Country ISO Code 1</fullName>
                    <isActive>false</isActive>
                    <label>Account Country ISO Code 1</label>
                </value>
                <value>
                    <fullName>Account Country ISO Code 2</fullName>
                    <isActive>false</isActive>
                    <label>Account Country ISO Code 2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Ingredients (Account)</relationshipLabel>
        <relationshipName>Observation_Ingredients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Archiving_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archiving Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Archiving_Reason__c</fullName>
        <label>Archiving Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Archiving_Flag__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asset no longer in use</fullName>
                </value>
                <value>
                    <fullName>Invalid Ingredients</fullName>
                </value>
                <value>
                    <fullName>Customer inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Ingredients (Brand)</relationshipLabel>
        <relationshipName>Competitor_Ingredients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversion_ID__c</fullName>
        <externalId>true</externalId>
        <label>Conversion ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF(Data_Quality_Score__c == 100, &apos;All Competitor Ingredients Captured&apos;, &apos;Missing: &apos; &amp;BR() 
&amp;IF (ISBLANK(Brand__c),&apos;Brand &apos; &amp;BR(),&apos;&apos;) 
&amp;IF (ISBLANK(Supplier__c), &apos;Supplier &apos; &amp;BR() , &apos;&apos;) 
&amp;IF (ISBLANK(TEXT(Product__c)),&apos;Product &apos; &amp;BR() ,&apos;&apos;) 
&amp;IF (ISBLANK(Volume__c), &apos;Volume &apos; &amp;BR() , &apos;&apos;) 
&amp;IF (ISBLANK(Expiration_Date_Contract__c), &apos;Expiration Date Contract &apos; &amp;BR() , &apos;&apos;) 
&amp;IF (ISBLANK(TEXT(Product_Category__c)), &apos;Product Category&apos;, &apos;&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF (MFLOOR(
IF(NOT(ISBLANK(Brand__c)), 16.67, 0) + IF(NOT(ISBLANK(Supplier__c)), 16.67, 0) + IF(NOT(ISBLANK(TEXT(Product__c))), 16.67, 0) + IF(NOT(ISBLANK(TEXT(Product_Category__c))), 16.67, 0) + IF(NOT(ISBLANK(Volume__c)), 16.67, 0)+ IF(NOT(ISBLANK(Expiration_Date_Contract__c)), 16.67, 0)
) &gt;= 100
, MFLOOR(
IF(NOT(ISBLANK(Brand__c)), 16.67, 0) + IF(NOT(ISBLANK(Supplier__c)), 16.67, 0) + IF(NOT(ISBLANK(TEXT(Product__c))), 16.67, 0) + IF(NOT(ISBLANK(TEXT(Product_Category__c))), 16.67, 0) + IF(NOT(ISBLANK(Volume__c)), 16.67, 0)+ IF(NOT(ISBLANK(Expiration_Date_Contract__c)), 16.67, 0)
) 
,IF(NOT(ISBLANK(Brand__c)), 16.67, 0) + IF(NOT(ISBLANK(Supplier__c)), 16.67, 0) + IF(NOT(ISBLANK(TEXT(Product__c))), 16.67, 0) + IF(NOT(ISBLANK(TEXT(Product_Category__c))), 16.67, 0) + IF(NOT(ISBLANK(Volume__c)), 16.67, 0)+ IF(NOT(ISBLANK(Expiration_Date_Contract__c)), 16.67, 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drinks_Unit__c</fullName>
        <label>Drinks Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drinks__c</fullName>
        <label>Drinks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Contract__c</fullName>
        <label>Expiration date Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mgmt_Organization__c</fullName>
        <label>Mgmt Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>Operating</fullName>
                </value>
                <value>
                    <fullName>Self Managing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Optional_Years__c</fullName>
        <label>Optional Years</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>PKL_Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Ingredients (Supplier)</relationshipLabel>
        <relationshipName>Competitor_Ingredients1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sustainable__c</fullName>
        <label>Sustainable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volume_Unit__c</fullName>
        <label>Volume Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kilogram</fullName>
                </value>
                <value>
                    <fullName>Litre</fullName>
                </value>
                <value>
                    <fullName>Each</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Way_of_Delivery__c</fullName>
        <label>Way of Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Routesales</fullName>
                </value>
                <value>
                    <fullName>Self pick up</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>LSP</fullName>
                </value>
                <value>
                    <fullName>Operator</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Caterer</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Cash &amp; Carry</fullName>
                </value>
                <value>
                    <fullName>Office Supplier</fullName>
                </value>
                <value>
                    <fullName>Special delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Competitor Ingredients</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CI{0000000000}</displayFormat>
        <label>Competitor Ingredients Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Ingredients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Archiving_Reason_Required</fullName>
        <active>true</active>
        <description>Archiving reason is required when competitor ingredients set to archived</description>
        <errorConditionFormula>AND($Setup.ValidationRulesSettings__c.Competitor_Ingredients__c, Archiving_Flag__c = true, ISPICKVAL(Archiving_Reason__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Archiving_Reason__c</errorDisplayField>
        <errorMessage>Please set an Archiving Reason</errorMessage>
    </validationRules>
</CustomObject>